--- a/src/app/pacientes/pages/historial-paciente/historial-paciente.component.html
+++ b/src/app/pacientes/pages/historial-paciente/historial-paciente.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="row animated fadeIn fast"
 >
     <div class="col-12">
@@ -33,7 +35,7 @@
                           <th>Medicamento</th>
                           <th>notas</th>
                           <th>Fecha de consulta</th>
-                          <th>Rut paciente</th>
+                         <!-- <th>Rut paciente</th> -->
                       
                         </tr>
                       </thead>
@@ -44,7 +46,7 @@
                           <td>{{historial.medicamento}}</td>
                           <td>{{historial.notas}}</td>
                           <td>{{historial.fecha_consulta}}</td>
-                          <td>{{historial.rut_paciente}}</td>
+                       <!--   <td>{{historial.rut_paciente}}</td> -->
                    
 
                 
