--- a/src/app/admin/pages/gestionarTiposCitas/editar-tipo-cita/editar-tipo-cita.component.html
+++ b/src/app/admin/pages/gestionarTiposCitas/editar-tipo-cita/editar-tipo-cita.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="formulario">
+<form [formGroup]="formulario"
+(ngSubmit)="editarTipoCita()">
     <div class="form-group mb-3">
       <label for="tipo_cita">Tipo de Cita</label>
       <input type="text" id="tipo_cita" formControlName="tipo_cita" class="form-control">
@@ -14,11 +15,8 @@
       <input type="text" id="especialidad_medica" formControlName="especialidad_medica" class="form-control">
     </div>
     
-    <div class="form-group mb-3">
-      <label for="color_etiqueta">Color de Etiqueta</label>
-      <input type="color" id="color_etiqueta" formControlName="color_etiqueta" class="form-control">
-    </div>
+
   
-    <button type="submit" class="btn btn-primary">Crear Tipo Cita</button>
+    <button type="submit" class="btn btn-primary">Modificar tipo cita</button>
   </form>
   
