--- a/src/app/admin/pages/inicio/inicio.component.html
+++ b/src/app/admin/pages/inicio/inicio.component.html
@@ -7,9 +7,9 @@
     <ol class="instruction-list">
         <li><strong>Registro de Pacientes:</strong> Registre a los pacientes en la sección "Gestionar Pacientes". Utilice el botón "Crear Usuarios" para completar el formulario.</li>
         <li><strong>Registro de Médicos:</strong> Registre a los médicos en "Gestionar Médicos". Haga clic en "Crear Médicos" y complete el formulario correspondiente.</li>
-        <li><strong>Creación de Horarios para Médicos:</strong> Establezca horarios para los médicos en "Gestionar Horarios Médicos", seleccionando "Crear Horario Médico".</li>
         <li><strong>Creación de Tipos de Citas Médicas:</strong> Defina tipos de citas médicas (ej: cardiología, psicología), asignando duración y precio en la sección correspondiente.</li>
-        <li><strong>Programación de Citas Médicas:</strong> Programe citas médicas para los pacientes. Pueden ser adquiridas por los usuarios de la aplicación o registradas por usted.</li>
+        <li><strong>Creación de Horarios para Médicos:</strong> Establezca horarios para los médicos en "Gestionar Horarios Médicos", seleccionando "Crear Horario Médico".</li>    
+        <li><strong>Programación de Citas Médicas:</strong> Programe citas médicas para los pacientes. Pueden ser adquiridas por los usuarios de la aplicación o registradas por usted, asegurese de que una vez terminada una cita con un paciente cambiar su estado a termino o si no no podra agendar otras citas con ese paciente.</li>
     </ol>
 </div>
 
