--- a/src/app/pacientes/pages/payment-failure/payment-failure.component.html
+++ b/src/app/pacientes/pages/payment-failure/payment-failure.component.html
@@ -1,1 +1,6 @@
-<p>payment-failure works!</p>
+<div class="centered-container">
+    <p>Transacción fallida</p>
+    <button class="btn btn-primary" (click)="volverAAgendarCita()">Volver a Agendar Cita</button>
+</div>
+
+
