--- a/src/app/admin/pages/gestionar-medicos/agregarmedico/agregarmedico.component.html
+++ b/src/app/admin/pages/gestionar-medicos/agregarmedico/agregarmedico.component.html
@@ -11,11 +11,11 @@
               <label for="rut">Rut</label>
               <input type="text" class="form-control" id="rut" formControlName="rut" placeholder="rut">
               <!-- Alerta para campo requerido -->
-              <div *ngIf="formulario.controls['rut'].touched && formulario.controls['rut'].errors?.['required']" class="alert alert-danger">
+              <div *ngIf="formulario.controls['rut'].touched && formulario.controls['rut'].errors?.['required']" class="text-danger">
                 Este campo es obligatorio.
               </div>
               <!-- Alerta para RUT inválido -->
-              <div *ngIf="formulario.controls['rut'].errors?.['rutInvalid']" class="alert alert-danger">
+              <div *ngIf="formulario.controls['rut'].errors?.['rutInvalid']" class="text-danger">
                 RUT no válido.
               </div>
             </div>
@@ -24,7 +24,7 @@
               <label for="nombre">Nombre</label>
               <input type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="Nombre">
               <!-- Alerta para campo requerido -->
-              <div *ngIf="formulario.controls['nombre'].touched && formulario.controls['nombre'].errors?.['required']" class="alert alert-danger">
+              <div *ngIf="formulario.controls['nombre'].touched && formulario.controls['nombre'].errors?.['required']" class="text-danger">
                 Este campo es obligatorio.
               </div>
             </div>
@@ -33,7 +33,7 @@
               <label for="apellidos">Apellidos</label>
               <input type="text" class="form-control" id="apellidos" formControlName="apellidos" placeholder="Apellidos">
               <!-- Alerta para campo requerido -->
-              <div *ngIf="formulario.controls['apellidos'].touched && formulario.controls['apellidos'].errors?.['required']" class="alert alert-danger">
+              <div *ngIf="formulario.controls['apellidos'].touched && formulario.controls['apellidos'].errors?.['required']" class="text-danger">
                 Este campo es obligatorio.
               </div>
             </div>
@@ -59,13 +59,15 @@
               <label for="telefono">Teléfono</label>
               <input type="tel" class="form-control" id="telefono" formControlName="telefono" placeholder="Teléfono">
               <!-- Alerta para campo requerido -->
-              <div *ngIf="formulario.controls['telefono'].touched && formulario.controls['telefono'].errors?.['required']" class="alert alert-danger">
+              <div *ngIf="formulario.controls['telefono'].touched && formulario.controls['telefono'].errors?.['required']" class="text-danger">
                 Este campo es obligatorio.
               </div>
               <!-- Alerta para formato de teléfono inválido -->
-              <div *ngIf="formulario.controls['telefono'].errors?.['telefonoInvalido']" class="alert alert-danger">
+                <!-- Alerta para formato de teléfono inválido -->
+              <div *ngIf="formulario.controls['telefono'].touched && formulario.controls['telefono'].errors?.['telefonoInvalido']" class="text-danger">
                 Formato de teléfono inválido. Debe ser +56 9 XXXX-XXXX.
               </div>
+
             </div>
             
           
@@ -74,7 +76,7 @@
               <label for="direccion">Dirección</label>
               <input type="text" class="form-control" id="direccion" formControlName="direccion" placeholder="Dirección">
               <!-- Alerta para campo requerido -->
-              <div *ngIf="formulario.controls['direccion'].touched && formulario.controls['direccion'].errors?.['required']" class="alert alert-danger">
+              <div *ngIf="formulario.controls['direccion'].touched && formulario.controls['direccion'].errors?.['required']" class="text-danger">
                 Este campo es obligatorio.
               </div>
             </div>
@@ -82,20 +84,25 @@
          
     
    
-              <div class="form-group col-md-6 mb-3">
-                <label for="nacionalidad">Nacionalidad</label>
-                <input type="text" class="form-control" id="nacionalidad" formControlName="nacionalidad" placeholder="nacionalidad">
+            <div class="form-group col-md-6 mb-3">
+              <label for="nacionalidad">Nacionalidad</label>
+              <input type="text" class="form-control" id="nacionalidad" formControlName="nacionalidad" placeholder="nacionalidad">
+              <!-- Mensaje de error para campo requerido -->
+              <div *ngIf="formulario.controls['nacionalidad'].touched && formulario.controls['nacionalidad'].errors?.['required']" class="text-danger">
+                Este campo es obligatorio.
               </div>
+            </div>
+            
               <!-- Dentro de tu formulario justo después del input de "nacionalidad" -->
               <div class="form-group col-md-6 mb-3">
                 <label for="password">Contraseña</label>
                 <input type="password" class="form-control" id="password" formControlName="password" placeholder="Contraseña">
                 <!-- Alerta para campo requerido -->
-                <div *ngIf="formulario.controls['password'].touched && formulario.controls['password'].errors?.['required']" class="alert alert-danger">
+                <div *ngIf="formulario.controls['password'].touched && formulario.controls['password'].errors?.['required']" class="text-danger">
                   Este campo es obligatorio.
                 </div>
                 <!-- Alerta para fuerza de contraseña -->
-                <div *ngIf="formulario.controls['password'].errors?.['passwordStrength']" class="alert alert-danger">
+                <div *ngIf="formulario.controls['password'].errors?.['passwordStrength']" class="text-danger">
                   La contraseña debe incluir mayúsculas, números y caracteres especiales.
                 </div>
               </div>
@@ -106,13 +113,15 @@
               <div class="form-group col-md-6 mb-3">
                 <label for="especialidad_medica">Especialidad</label>
                 <select class="form-control" id="especialidad_medica" formControlName="especialidad_medica">
-                  <!-- Opción predeterminada -->
                   <option value="" disabled selected>Seleccione especialidad</option>
-              
-                  <!-- Opciones dinámicas desde la base de datos -->
                   <option *ngFor="let especialidad of especialidades" [value]="especialidad">{{ especialidad }}</option>
                 </select>
+                <!-- Mensaje de error para campo requerido -->
+                <div *ngIf="formulario.controls['especialidad_medica'].touched && formulario.controls['especialidad_medica'].errors?.['required']" class="text-danger">
+                  La selección de la especialidad es obligatoria.
+                </div>
               </div>
+              
               
               
          
