--- a/src/app/admin/pages/gestionarHorariosMedicos/editar-horario/editar-horario.component.html
+++ b/src/app/admin/pages/gestionarHorariosMedicos/editar-horario/editar-horario.component.html
@@ -5,50 +5,53 @@
         <form [formGroup]="horarioMedicoForm" (ngSubmit)="editarHorario()">
           <div class="form-group mt-3">
             <label for="diaSemana">Día de la Semana</label>
-            <input type="text" class="form-control" id="diaSemana" formControlName="diaSemana" placeholder="Lunes">
+            <select class="form-control" id="diaSemana" formControlName="diaSemana">
+              <option value="">Seleccione día de la semana</option>
+              <!-- Opciones de días -->
+              <option value="lunes">Lunes</option>
+              <option value="martes">Martes</option>
+              <option value="miercoles">Miércoles</option>
+              <option value="jueves">Jueves</option>
+              <option value="viernes">Viernes</option>
+              <option value="sabado">Sábado</option>
+              <option value="domingo">Domingo</option>
+            </select>
+            <!-- Alerta para campo requerido -->
+            <div *ngIf="horarioMedicoForm.controls['diaSemana'].touched && horarioMedicoForm.controls['diaSemana'].errors?.['required']" class="text-danger">
+              Este campo es obligatorio.
+            </div>
           </div>
-          <div class="form-group mt-3">
-            <label for="horaInicio">Hora de Inicio</label>
-            <input type="time" class="form-control" id="horaInicio" formControlName="horaInicio" placeholder="08:00:00">
+
+    <div class="form-group mt-3">
+          <label for="horaInicio">Hora de Inicio</label>
+          <input type="time" class="form-control" id="horaInicio" formControlName="horaInicio" placeholder="08:00:00">
+          <!-- Alerta para campo requerido -->
+          <div *ngIf="horarioMedicoForm.controls['horaInicio'].touched && horarioMedicoForm.controls['horaInicio'].errors?.['required']" class="text-danger">
+            Este campo es obligatorio.
           </div>
-          <div class="form-group mt-3">
-            <label for="horaFinalizacion">Hora de Finalización</label>
-            <input type="time" class="form-control" id="horaFinalizacion" formControlName="horaFinalizacion" placeholder="12:00:00">
+        </div>
+        
+        <div class="form-group mt-3">
+          <label for="horaFinalizacion">Hora de Finalización</label>
+          <input type="time" class="form-control" id="horaFinalizacion" formControlName="horaFinalizacion" placeholder="12:00:00">
+          <!-- Alerta para campo requerido -->
+          <div *ngIf="horarioMedicoForm.controls['horaFinalizacion'].touched && horarioMedicoForm.controls['horaFinalizacion'].errors?.['required']" class="text-danger">
+            Este campo es obligatorio.
           </div>
-          <div class="form-group mt-3">
-            <label for="horaInicioColacion">Hora de Inicio de Colación</label>
-            <input type="time" class="form-control" id="horaInicioColacion" formControlName="hora_inicio_colacion" placeholder="12:30:00">
-          </div>
-          <div class="form-group mt-3">
-            <label for="horaFinColacion">Hora de Fin de Colación</label>
-            <input type="time" class="form-control" id="horaFinColacion" formControlName="hora_fin_colacion" placeholder="13:00:00">
-          </div>
-          <div class="form-group mt-3">
-            <label for="duracionCitas">Duración de Citas (minutos)</label>
-            <input type="number" class="form-control" id="duracionCitas" formControlName="duracionCitas" placeholder="30">
-          </div>
+        </div>
+          
+   
           <div class="form-group">
             <label for="rutMedico">Médico</label>
             <select class="form-control" id="rutMedico" formControlName="rut_medico">
               <option [value]="null">Selecciona un médico</option>
-              <option *ngFor="let medico of medicos" [value]="medico.rut">{{ medico.nombre }} (RUT: {{ medico.rut }})</option>
+              <option *ngFor="let medico of medicos" [value]="medico.rut">{{ medico.nombre }} (Especialidad: {{ medico.especialidad_medica }})</option>
             </select>
           </div>
-          <div class="form-group mt-3">
-            <label for="disponibilidad">Disponibilidad</label>
-            <select class="form-control" id="disponibilidad" formControlName="disponibilidad">
-              <option *ngFor="let opcion of disponibilidadOpciones" [value]="opcion.valor">
-                {{ opcion.etiqueta }}
-              </option>
-            </select>
-          </div>
+
           
-          
-          <div class="form-group mt-3">
-            <label for="fechaCreacion">Fecha de Creación</label>
-            <input type="datetime-local" class="form-control" id="fechaCreacion" formControlName="fechaCreacion">
-          </div>
-          <button type="submit" class="btn btn-primary btn-block mt-3">Registrar Horario Médico</button>
+          <button type="submit" class="btn btn-primary btn-block mt-3" [disabled]="!horarioMedicoForm.valid">Registrar Horario Médico</button>
+
         </form>
       </div>
     </div>
