--- a/src/app/admin/pages/gestionarTiposCitas/agregar-tipo-cita/agregar-tipo-cita.component.html
+++ b/src/app/admin/pages/gestionarTiposCitas/agregar-tipo-cita/agregar-tipo-cita.component.html
@@ -6,12 +6,13 @@
       <label class="form-check-label" for="consultaGeneral">Consulta General</label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="radio" id="especialidad" formControlName="tipo_cita" value="Especialidad">
-      <label class="form-check-label" for="especialidad">Especialidad</label>
+      <input class="form-check-input" type="radio" id="especialidad" formControlName="tipo_cita" value="Consulta Especialidad">
+      <label class="form-check-label" for="especialidad">Consulta Especialidad</label>
     </div>
+    
   </div>
 
-  <div class="form-group mb-3" *ngIf="formularioTipoCita.get('tipo_cita')?.value === 'Especialidad'">
+  <div class="form-group mb-3" *ngIf="formularioTipoCita.get('tipo_cita')?.value === 'Consulta Especialidad'">
     <label for="especialidad_medica">Especialidad Médica</label>
     <input type="text" id="especialidad_medica" formControlName="especialidad_medica" class="form-control">
   </div>
@@ -50,5 +51,6 @@
   
 
   
-  <button type="submit" class="btn btn-primary">Crear Tipo Cita</button>
+  <button type="submit" class="btn btn-primary" [disabled]="!formularioTipoCita.valid">Crear Tipo Cita</button>
+
 </form>
