--- a/src/app/pacientes/pages/agendar-cita/agendar-cita.component.scss
+++ b/src/app/pacientes/pages/agendar-cita/agendar-cita.component.scss
@@ -16,5 +16,23 @@
     height: 600px; // Ajusta la altura según sea necesario
   }
 
+  .abierto {
+    background-color: green;
+    color: white;
+}
+
+.cerrado {
+    background-color: red;
+    color: white;
+}
+
+.btn-primary.btn-lg {
+    transition: transform 0.3s ease;
+}
+
+.btn-primary.btn-lg:hover {
+    transform: scale(1.1);
+}
+
 
 
