--- a/src/app/pacientes/pages/formulario-cita/formulario-cita.component.html
+++ b/src/app/pacientes/pages/formulario-cita/formulario-cita.component.html
@@ -1,3 +1,5 @@
+<button class="btn btn-secondary mt-3 btn-margen-izquierdo" (click)="volverAtras()">Volver Atrás</button>
+
 <div class="container mt-5">
   <h2 class="text-center mb-4">Formulario Cita</h2>
   <div class="form-container">
@@ -33,4 +35,36 @@
       <button type="submit" class="btn btn-primary mt-3">Buscar médicos disponibles</button>
     </form>
   </div>
+
+
+<!-- Asumiendo que quieres mostrar esta información en alguna parte de tu plantilla -->
+<div class="row">
+  <!-- Días de lunes a jueves -->
+  <div class="col-12">
+    <div class="row">
+      <div class="col-md-3 mb-4" *ngFor="let dia of ordenDias.slice(0, 4)">
+        <div class="dia-container">
+          <h3>{{ dia | titlecase }}</h3>
+          <ul>
+            <li *ngFor="let especialidad of horariosEspecialidades[dia]">{{ especialidad }}</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Días de sábado y domingo -->
+  <div class="col-12">
+    <div class="row justify-content-center">
+      <div class="col-md-3 mb-4" *ngFor="let dia of ordenDias.slice(5)">
+        <div class="dia-container">
+          <h3>{{ dia | titlecase }}</h3>
+          <ul>
+            <li *ngFor="let especialidad of horariosEspecialidades[dia]">{{ especialidad }}</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
