--- a/src/app/pacientes/pages/formulario-cita/formulario-cita.component.scss
+++ b/src/app/pacientes/pages/formulario-cita/formulario-cita.component.scss
@@ -9,3 +9,33 @@
     width: 100%;
     max-width: 500px; /* Ajusta este valor según la anchura que prefieras para tu formulario */
   }
+
+  .btn-primary {
+    transition: transform 0.3s ease;
+  
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+
+  .btn btn-secondary  {
+    transition: transform 0.3s ease;
+  
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+
+  .btn-margen-izquierdo {
+    margin-left: 180px; /* Ajusta este valor según necesites */
+  }
+  
+  .dia-container {
+    /* Asegura que todos los contenedores tengan la misma altura */
+    display: flex;
+    flex-direction: column;
+  
+    /* Alinea el contenido al inicio del contenedor */
+    align-items: start;
+  }
+  
